--- a/UserUI/src/app/chat-dialog/chat-dialog.component.html
+++ b/UserUI/src/app/chat-dialog/chat-dialog.component.html
@@ -42,9 +42,8 @@
   
   <div class="header-color">
   <header class="clearfix">
-    
-    <!-- <button class="chat-close">x</button> -->
-    <h4 class="chatbot"><b>Bot</b></h4><i class="material-icons chaticon i">chat</i>
+   
+    <h4 class="chatbot"><b>Vanessa</b></h4><i class="material-icons chaticon i">chat</i>
 
     <span class="chat-message-counter">J</span>
 
