--- a/UserUI/src/app/sidebarresults/sideres.component.css
+++ b/UserUI/src/app/sidebarresults/sideres.component.css
@@ -233,3 +233,27 @@ border:1px solid #d3d3d3;
     background-size: 80% 100%;
     border:1px solid #d3d3d3;
     }
+
+    .searchin{
+      margin-left: 100px;
+      margin-top: 30px;
+    }
+
+    .backgroundimage{
+      margin-left: 20px;
+      margin-top:35px;
+    }
+    .backgroundimagee{
+      margin-left: 20px;
+      margin-top:45px;
+    }
+    .backgroundimage1{
+
+      height:60px;
+       width:100px;
+    }
+    .backgroundimage2{
+      
+            height:35px;
+             width:40px;
+          }
